[gd_scene load_steps=2 format=3 uid="uid://c5jwy1502iyxp"]

[ext_resource type="Script" uid="uid://b00w4q7k3h4n3" path="res://common/UISelector.gd" id="1_rlye6"]

[node name="UISelector" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rlye6")

[node name="CategoryDropdown" type="OptionButton" parent="."]
layout_mode = 0

[node name="SpeciesDropdown" type="OptionButton" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 32.0
offset_bottom = 60.0

[node name="GenerateButton" type="Button" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 111.0
text = "Generate"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_top = 171.0
offset_right = 44.0
offset_bottom = 202.0
text = "Save"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_top = 128.0
offset_right = 46.0
offset_bottom = 159.0
text = "Load"
